# hayya

./: .env.example  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  bun.lockb  contentlayer.config.js  mdsx.config.js  nixpacks.toml  only-deploy-some.sh  package-lock.json  package.json  permissions.txt  pnpm-lock.yaml  postgres.docker-compose.yml  svelte.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: codestyle.yml  deploy.yml  migrate.yml
.vercel/: project.json
.vercel/builders/: package-lock.json  package.json
api/: audit_logs.rs  handler.rs  main.rs
api/auth/: info.rs  token.rs  whoami.rs
api/cron/: roster.rs
api/roster/: assign_role.rs  home.rs  vacc.rs
api/src/: lib.rs  models.rs
api/vacc/: list.rs
content/: index.md
content/misc/: markdown-guide.md
content/training/: get-training.md  overview.md  training-plans.md  training-requests.md
migrations/: 20231203160957_create_table_roles.up.sql  20231203163042_create_table_vaccs.down.sql  20231203163042_create_table_vaccs.up.sql  20231203163044_create_table_users.up.sql  20231204153416_create_table_audit_log_entries.down.sql  20231204153416_create_table_audit_log_entries.up.sql  20231207023556_update_table_roles_add_perm_roster_extended.down.sql  20231207023556_update_table_roles_add_perm_roster_extended.up.sql  20231207185217_update_table_roles_add_perm_role_assign.down.sql  20231207185217_update_table_roles_add_perm_role_assign.up.sql  20231208030133_add_training_queue_perm_to_dev.down.sql  20231208030133_add_training_queue_perm_to_dev.up.sql  20231208191839_update_users_make_role_array.down.sql  20231208191839_update_users_make_role_array.up.sql  20231209163013_seed_vaccs.down.sql  20231209163013_seed_vaccs.up.sql
prisma/: schema.prisma  seed.js
src/: app.d.ts  app.html  app.pcss  hooks.client.ts  hooks.server.ts
src-rs/: audit_log.rs  auth.rs  datafeed.rs  id.rs  jwt.rs  lib.rs  macros.rs  members.rs  models.rs  roles.rs
tools/: generate_keypair.rs
(+494 files in other folders)
