[package]
name = "menahq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vercel_runtime = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[lib]
path = "api/src/lib.rs"

[[bin]]
name = "handler"
path = "api/handler.rs"

[[bin]]
name = "api_auth_info"
path = "api/auth/info.rs"

[[bin]]
name = "api_auth_token"
path = "api/auth/token.rs"