[package]
name = "menahq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vercel_runtime = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.6", package = "sqlx-oldapi", features = ["runtime-tokio-rustls", "postgres"] }
jwt-simple = "0.11"
hex = "0.4"
async-trait = "0.1"
ulid = "1.1"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "handler"
path = "api/handler.rs"

[[bin]]
name = "api_auth_info"
path = "api/auth/info.rs"

[[bin]]
name = "api_auth_token"
path = "api/auth/token.rs"

[[bin]]
name = "generate_keypair"
path = "tools/generate_keypair.rs"

[[bin]]
name = "api_audit_logs"
path = "api/audit_logs.rs"