[package]
name = "menahq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vercel_runtime = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.7", git = "https://github.com/VATMENA/sqlx", features = ["runtime-tokio", "tls-rustls", "postgres"] }
jwt-simple = "0.11"
hex = "0.4"
async-trait = "0.1"
ulid = "1.1"
log = "0.4"
simple_logger = "4"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "menahq-api"
path = "api/main.rs"